[project]
name = "scepter"
version = "0.0.1"
authors = [
  { name="hqiu", email="hqiu678@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
requires = [
    "pycraf",
    "cysgp4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hqiu-nju/scepter/"
Issues = "https://github.com/hqiu-nju/scepter/issues"